preview image added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="temp" id="temp">00&deg;C</div>
                 <div class="min-max" id="min-max">0&deg;C (min) / 0&deg;C (max)</div>
                 <div class="weather" id="weather">clear</div>
-                <div class="img"></div>
+                <div id="gifArea"></div>
             </div>
         </section>
     </main>
